--- a/site/themes/sogilis/layouts/index.html
+++ b/site/themes/sogilis/layouts/index.html
@@ -27,15 +27,7 @@
         <div class="container blog_index">
             <div class="row">
                 {{ range (.Paginate .Site.RegularPages).Pages }}
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                        <div class="blog_index_article">
-                            <a href="#NULL">
-                                <img src="img_article/img_blog.jpg">
-                                <h1 class="title_name">Title goes here. Long title to test here.</h1>
-                                <p>Lire la suite...</p>
-                            </a>
-                        </div>
-                    </div>
+                    {{ .Render "summary" }}
                 {{ end }}
             </div>
 
