--- a/site/themes/sogilis/layouts/_default/summary.html
+++ b/site/themes/sogilis/layouts/_default/summary.html
@@ -1,9 +1,11 @@
 <div class="col-10 offset-1 offset-sm-0 col-sm-6 col-md-4 col-lg-4 col-xl-4">
     <div class="blog_index_article">
-        <a href="#NULL">
-            <img src="img_article/img_blog.jpg">
-            <h1 class="title_name">Title goes here. Long title to test here.</h1>
-            <p>Lire la suite...</p>
+        <a href="{{ .Permalink }}">
+            <img src="???">
+            <h1 class="title_name">{{ .Title }}</h1>
+            <p>
+                {{ if isset .Params "summary" }}{{ .Params.Summary | markdownify }}{{ else }}{{ .Summary }}{{ end }}
+            </p>
         </a>
     </div>
 </div>
