--- a/site/themes/sogilis/layouts/partials/head.html
+++ b/site/themes/sogilis/layouts/partials/head.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="{{ "css/aos.css" | relURL }}" />
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
-        <script src="{{ "js/aos.js" | relURL }}"></script>
+        <script src="{{ "js/aos.js" | relURL }}" charset="utf-8" type="text/javascript"></script>
         <script src="{{ "js/js.cookie.js" | relURL }}" charset="utf-8" type="text/javascript"></script>
 
         <link rel="icon" type="image/png" href="{{ "images/favicon.png" | relURL }}"/>
