--- a/site/themes/sogilis/layouts/partials/head.html
+++ b/site/themes/sogilis/layouts/partials/head.html
@@ -1,19 +1,13 @@
     <head>
-        <!-- En-tête de la page -->
         <meta charset="utf-8" />
         <title>{{ .Site.Title }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        {{ $style := resources.Get "sass/sup1200.scss" | toCSS | minify | fingerprint }}
-        <link rel="stylesheet" media="screen and (min-width: 1200px)" href="{{ $style.Permalink }}" type="text/css" />
-        {{ $style := resources.Get "sass/992-1199.scss" | toCSS | minify | fingerprint }}
-        <link rel="stylesheet" media="screen and (min-width: 992px) and (max-width: 1199px)" href="{{ $style.Permalink }}" type="text/css" />
-        {{ $style := resources.Get "sass/768-991.scss" | toCSS | minify | fingerprint }}
-        <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width: 991px)" href="{{ $style.Permalink }}" type="text/css" />
-        {{ $style := resources.Get "sass/576-767.scss" | toCSS | minify | fingerprint }}
-        <link rel="stylesheet" media="screen and (min-width: 576px) and (max-width: 767px)" href="{{ $style.Permalink }}" type="text/css" />
-        {{ $style := resources.Get "sass/inf576.scss" | toCSS | minify | fingerprint }}
-        <link rel="stylesheet" media="screen and (max-width: 575px)" href="{{ $style.Permalink }}" type="text/css" />
+        {{ $styles := dict "(min-width: 1200px)" "sass/sup1200.scss" "(min-width: 992px) and (max-width: 1199px)" "sass/992-1199.scss" "(min-width: 768px) and (max-width: 991px)" "sass/768-991.scss" "(min-width: 576px) and (max-width: 767px)" "sass/576-767.scss" "(max-width: 575px)" "sass/inf576.scss" }}
+        {{ range $media_query, $sass_style := $styles }}
+            {{ $style := resources.Get $sass_style | toCSS | minify | fingerprint }}
+            <link rel="stylesheet" media="screen and {{ $media_query }}" href="{{ $style.Permalink }}" type="text/css" />
+        {{ end }}
 
         <link rel="stylesheet" type="text/css" href="{{ "css/bootstrap.css" | relURL }}">
         <link rel="stylesheet" href="{{ "css/aos.css" | relURL }}" />
