[SINGLE] Styling: replace classes by dedicated html tags

--- a/site/themes/sogilis/assets/sass/576-767.scss
+++ b/site/themes/sogilis/assets/sass/576-767.scss
@@ -140,7 +140,7 @@ $light-electric-blue:#A7E4EA;
 }
 
 
-//MENU MOBILE 
+//MENU MOBILE
 
 .content-menu-mobile{
 	position:fixed;
@@ -462,7 +462,7 @@ $light-electric-blue:#A7E4EA;
 
 
 
-//FOOTER 
+//FOOTER
 
 footer{
 
@@ -778,7 +778,7 @@ footer{
 }
 
 .lets_create_something_light_blue{
-	background-color:$light-electric-blue;	
+	background-color:$light-electric-blue;
 	padding-bottom:50px;
 
 	h2{
@@ -804,7 +804,7 @@ footer{
 
 
 .lets_create_something_light_blue_bis{
-	background-color:$light-electric-blue;	
+	background-color:$light-electric-blue;
 	padding-bottom:70px;
 	margin-bottom: -50px;
 	margin-top: 50px;
@@ -1045,7 +1045,7 @@ textarea:focus{
 .home_zone_1{
 	background-color:$super-light-grey;
 	width:100%;
-	height:650px;	
+	height:650px;
 	border:15px solid white;
 	overflow:hidden;
 
@@ -1092,8 +1092,8 @@ textarea:focus{
 	.descr_text{
 		font-family: 'EB Garamond', serif;
 		font-size:1em;
-		color:$medium-grey;	
-		margin-top:15px;	
+		color:$medium-grey;
+		margin-top:15px;
 	}
 
 	.descr_text p::before{
@@ -1117,7 +1117,7 @@ textarea:focus{
 	}
 
 	.activity_1{
-		margin-top:0px; 
+		margin-top:0px;
 		margin-bottom:40px;
 		.fond_1{
 			background:url('../img/fond_activity_1.svg') no-repeat;
@@ -1174,7 +1174,7 @@ textarea:focus{
 	}
 
 	.activity_2{
-		margin-top:0px; 
+		margin-top:0px;
 		margin-bottom:40px;
 		.fond_1{
 			background:url('../img/fond_activity_1.svg') no-repeat;
@@ -1486,7 +1486,7 @@ textarea:focus{
 	    padding-bottom:10px;
 
 		.accordion {
-		   
+
 		    border-right:none;
 		    border-left:none;
 		    color: #444;
@@ -1541,7 +1541,7 @@ textarea:focus{
 			    }
 	    	}
 		}
-	
+
 		.active, .accordion:hover {
 		    background-color: none;
 		}
@@ -1660,7 +1660,7 @@ textarea:focus{
 /**********************************************************************************************************************************************************/
 
 .content_purpose_1{
-	padding-top:150px; 
+	padding-top:150px;
 
 	.title_level_1{
 		font-size:2em;
@@ -1950,7 +1950,7 @@ textarea:focus{
 		margin-top: 50px;
 		margin-bottom: 40px;
 	}
-	
+
 	.text_description{
 		margin-top:10px;
 		margin-bottom:50px;
@@ -2246,7 +2246,7 @@ textarea:focus{
 		margin-top:0px;
 	}
 
-	.bis{ 
+	.bis{
 		.title_name_2{
 			color: #016099;
 		    font-size: 1.2em;
@@ -2497,147 +2497,146 @@ textarea:focus{
 			}
 		}
 
-		.blog_title_1{
-			font-family: 'EB Garamond', serif;
-			font-size: 1.4rem;
-			color:$medium-grey;
-			font-weight: 700;
-			margin-bottom: 20px;
-			margin-left: 30px;
-		}
-
-		.blog_title_1::before{
-			content: '';
-		    height: 5px;
-		    width: 20px;
-		    background-color: #A7E4EA;
-		    display: block;
-		    position: absolute;
-		    margin-top: 15px;
-		    margin-left: -30px;
-		}
-
-		.blog_title_2{
-			font-family: 'EB Garamond', serif;
-			font-size: 1.3rem;
-			color:$medium-grey;
-			font-weight: 700;
-			margin-bottom: 20px;
-			margin-left: 45px;
-		}
-
-		.blog_title_3{
-			font-family: 'EB Garamond', serif;
-			font-size: 1rem;
-			color:$medium-grey;
-			font-weight: 700;
-			margin-bottom: 10px;
-			margin-left: 60px;
-		}
-
-		.blog_text_normal{
+		.content {
 			font-family: 'EB Garamond', serif;
 			font-size: 0.9rem;
 			color:$medium-grey;
 			font-weight: 400;
 			margin-left: 60px;
-		}
-
-		.blog_text_italic{
-			font-family: 'EB Garamond', serif;
-			font-size: 0.9rem;
-			color:$medium-grey;
-			font-weight: 400;
-			font-style: italic;
-			margin-left: 60px;
-		}
-
-		.blog_text_gras{
-			font-family: 'EB Garamond', serif;
-			font-size: 0.9rem;
-			color:$medium-grey;
-			font-weight: 600;
-			margin-left: 60px;
-		}
-
-		.blog_simple_link{
-			color:$wolf-blue;
-			font-weight: 700;
-			text-decoration: underline;
-			-webkit-transition: all 0.3s;
-			-moz-transition: all 0.3s;
-			-o-transition: all 0.3s;
-			transition: all 0.3s;
-		}
-
-		.blog_simple_link:hover{
-			color: $dark_grey;
-		}
-
-		.blog_quotes{
-			width: 80%;
-			font-family: 'EB Garamond', serif;
-			font-size: 0.9rem;
-			color:$medium-grey;
-			font-weight: 400;
-			font-style: italic;
-			margin-left: 60px;
-			margin-top: 30px;
-			margin-bottom: 30px;
-			padding-top:30px;
-			padding-bottom:15px;
-			padding-left:20px;
-			padding-right:20px;
-			border:solid 5px transparent;
-			border-left-color: $dark_blue;
-
-			-webkit-box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
-			-moz-box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
-			box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
-			background-color:white;
-		}
-
-		.blog_code{
-			width: 80%;
-			font-family: 'Montserrat', serif;
-			font-size: 0.8rem;
-			color:$medium-grey;
-			font-weight: 400;
-			margin-left: 60px;
-			margin-top: 30px;
-			margin-bottom: 30px;
-			padding-top:30px;
-			padding-bottom:15px;
-			padding-left:20px;
-			padding-right:20px;
-			border:solid 5px transparent;
-			border-left-color: $medium_blue;
-
-			-webkit-box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
-			-moz-box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
-			box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
-			background-color:white;
-		}
-
-		.blog_list{
-			font-family: 'EB Garamond', serif;
-			font-size: 0.9rem;
-			color:$medium-grey;
-			font-weight: 400;
-			margin-left: 110px;
-			list-style: url('../img/puce_list.svg');
-			margin-top:20px;
-			margin-bottom: 30px;
-
-			li{
-				margin-top:5px;
+			h1{
+				font-family: 'EB Garamond', serif;
+				font-size: 1.4rem;
+				color:$medium-grey;
+				font-weight: 700;
+				margin-bottom: 20px;
+				margin-left: 30px;
 			}
-		}
 
-		.blog_img{
-			-webkit-box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
-			-moz-box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
-			box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
-			margin-left: 60px;
+			h1::before{
+				content: '';
+			    height: 5px;
+			    width: 20px;
+			    background-color: #A7E4EA;
+			    display: block;
+			    position: absolute;
+			    margin-top: 15px;
+			    margin-left: -30px;
+			}
+
+			h2{
+				font-family: 'EB Garamond', serif;
+				font-size: 1.3rem;
+				color:$medium-grey;
+				font-weight: 700;
+				margin-bottom: 20px;
+				margin-left: 45px;
+			}
+
+			h3{
+				font-family: 'EB Garamond', serif;
+				font-size: 1rem;
+				color:$medium-grey;
+				font-weight: 700;
+				margin-bottom: 10px;
+				margin-left: 60px;
+			}
+
+			em{
+				font-family: 'EB Garamond', serif;
+				font-size: 0.9rem;
+				color:$medium-grey;
+				font-weight: 400;
+				font-style: italic;
+				margin-left: 60px;
+			}
+
+			strong{
+				font-family: 'EB Garamond', serif;
+				font-size: 0.9rem;
+				color:$medium-grey;
+				font-weight: 600;
+				margin-left: 60px;
+			}
+
+			a{
+				color:$wolf-blue;
+				font-weight: 700;
+				text-decoration: underline;
+				-webkit-transition: all 0.3s;
+				-moz-transition: all 0.3s;
+				-o-transition: all 0.3s;
+				transition: all 0.3s;
+			}
+
+			a:hover{
+				color: $dark_grey;
+			}
+
+			blockquote{
+				width: 80%;
+				font-family: 'EB Garamond', serif;
+				font-size: 0.9rem;
+				color:$medium-grey;
+				font-weight: 400;
+				font-style: italic;
+				margin-left: 60px;
+				margin-top: 30px;
+				margin-bottom: 30px;
+				padding-top:30px;
+				padding-bottom:15px;
+				padding-left:20px;
+				padding-right:20px;
+				border:solid 5px transparent;
+				border-left-color: $dark_blue;
+
+				-webkit-box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
+				-moz-box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
+				box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
+				background-color:white;
+			}
+
+			pre{
+				width: 80%;
+				font-family: 'Montserrat', serif;
+				font-size: 0.8rem;
+				color:$medium-grey;
+				font-weight: 400;
+				margin-left: 60px;
+				margin-top: 30px;
+				margin-bottom: 30px;
+				padding-top:30px;
+				padding-bottom:15px;
+				padding-left:20px;
+				padding-right:20px;
+				border:solid 5px transparent;
+				border-left-color: $medium_blue;
+
+				-webkit-box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
+				-moz-box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
+				box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
+				background-color:white;
+			}
+
+			ul{
+				font-family: 'EB Garamond', serif;
+				font-size: 0.9rem;
+				color:$medium-grey;
+				font-weight: 400;
+				margin-left: 110px;
+				list-style: url('../img/puce_list.svg');
+				margin-top:20px;
+				margin-bottom: 30px;
+
+				li{
+					margin-top:5px;
+				}
+			}
+
+			img{
+				-webkit-box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
+				-moz-box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
+				box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
+				margin-left: 60px;
+			}
 		}
 	}
