--- a/site/themes/sogilis/layouts/_default/single.html
+++ b/site/themes/sogilis/layouts/_default/single.html
@@ -21,13 +21,13 @@
         </div>
 
 
-        <div class="row">
+        <div class="row content">
              <div class="col-12">
                 {{ .Content }}
             </div>
         </div>
 
-        <img class="blog_img" src="{{ "images/img_blog.jpg" | relURL }}">
+        <img src="{{ "images/img_blog.jpg" | relURL }}">
     </div>
 </main>
 {{ end }}
