Move menu content out of sogilis theme

--- a/site/themes/sogilis/assets/sass/992-1199.scss
+++ b/site/themes/sogilis/assets/sass/992-1199.scss
@@ -146,7 +146,7 @@ $light-electric-blue:#A7E4EA;
     nav{
     	margin-top:15px;
 
-    	.menu_link_1, .menu_link_2{
+    	> a {
     		font-family: 'Montserrat', sans-serif;
 			color:$wolf-blue;
 			text-decoration:none;
@@ -156,7 +156,7 @@ $light-electric-blue:#A7E4EA;
 			cursor:pointer;
     	}
 
-    	.menu_link_1::before{
+    	> a::before{
     		content: '';
 			display: block;
 			height: 10px;
@@ -172,23 +172,11 @@ $light-electric-blue:#A7E4EA;
 			transition: all 0.3s;
     	}
 
-    	.menu_link_2::before{
-    		content: '';
-			display: block;
-			height: 10px;
-			width: 0px;
-			background-color: #A7E4EA;
-			position: absolute;
-			margin-top: -36px;
+    	> a:last-child::before{
 			margin-left: 291px;
-			z-index: -1;
-			-webkit-transition: all 0.3s;
-			-moz-transition: all 0.3s;
-		  	-o-transition: all 0.3s;
-			transition: all 0.3s;
     	}
 
-    	.menu_link_1:hover:before, .menu_link_2:hover:before{
+    	> a:hover:before{
     		width:50px;
     	}
 
