--- a/site/themes/sogilis/layouts/partials/header.html
+++ b/site/themes/sogilis/layouts/partials/header.html
@@ -4,18 +4,21 @@
             <div class="col-sm-12 col-md-2 offset-md-1 col-lg-2 offset-lg-2 col-xl-2 offset-xl-2">
                 <a href="index.html"><img src="{{ "images/logo_sogilis.svg" | relURL }}"></a>
             </div>
-
             <nav class="col-md-6 offset-md-3 col-lg-4 offset-lg-3 col-xl-5 offset-xl-2 ">
-                <div class="dropdown">
-                    <button class="dropbtn">Services</button>
-                    <div class="dropdown-content">
-                        <a href="services-applications-cloud-native.html">Applications Cloud Natives</a>
-                        <a href="services-embarques-et-iot.html">Logiciels Embarqués & IoT</a>
-                        <a href="services-logiciels-critiques.html">Logiciels Critiques</a>
-                    </div>
-                </div>
-                <a href="vision.html" class="menu_link_1">Notre Vision</a>
-                <a href="contact.html" class="menu_link_2">Contact</a>
+                {{ range .Site.Menus.main }}
+                    {{ if .HasChildren }}
+                        <div class="dropdown">
+                            <button class="dropbtn">{{ .Name }}</button>
+                            <div class="dropdown-content">
+                                {{ range .Children }}
+                                    <a href="{{ .URL }}">{{ .Name }}</a>
+                                {{ end }}
+                            </div>
+                        </div>
+                    {{ else }}
+                        <a href="{{ .URL }}">{{ .Name }}</a>
+                    {{ end }}
+                {{ end }}
             </nav>
         </div>
     </div>
