Fix typo in footer menu

--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -123,7 +123,7 @@
             <a href="services-applications-cloud-native.html">Applications Cloud Natives</a>
           </li>
           <li>
-            <a href="services-embarques-et-iot.html">Logiciels Embarqués & IoT<</a>
+            <a href="services-embarques-et-iot.html">Logiciels Embarqués & IoT</a>
           </li>
           <li>
             <a href="services-logiciels-critiques.html">Logiciels Critiques</a>
