--- a/site/themes/sogilis/assets/sass/sup1200.scss
+++ b/site/themes/sogilis/assets/sass/sup1200.scss
@@ -1,9 +1,4 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-
-@import "compass/reset";
+@import "compass_reset";
 @import url('https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,500,500i,600,600i,700,700i,800,800i|Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
 /*font-family: 'EB Garamond', serif;
 font-family: 'Montserrat', sans-serif;
