--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -20,7 +20,8 @@
             </div>
 
             <div class="col-2 col-sm-7 col-md-1 col-lg-1">
-                <a class="liens_sociaux twitter" href="https://twitter.com/Sogilis?lang=fr">
+                {{ with $.Site.Params.twitter }}
+                <a class="liens_sociaux twitter" href="{{ . }}">
                     <svg version="1.1"
                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
                          x="0px" y="0px" width="27.1px" height="22.1px" viewBox="0 0 27.1 22.1" style="enable-background:new 0 0 27.1 22.1;"
@@ -34,8 +35,14 @@
                         C25.5,4.7,26.4,3.7,27.1,2.6z"/>
                     </svg>
                 </a>
+                {{ end }}
+
+                {{ if (and $.Site.Params.twitter $.Site.Params.linkedin) }}
                 <br>
-                <a class="liens_sociaux" href="https://www.linkedin.com/company/sogilis/">
+                {{ end }}
+
+                {{ with $.Site.Params.linkedin }}
+                <a class="liens_sociaux" href="{{ . }}">
                     <svg version="1.1"
                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
                          x="0px" y="0px" width="25.2px" height="24px" viewBox="0 0 25.2 24" style="enable-background:new 0 0 25.2 24;"
@@ -48,6 +55,7 @@
                         h5.4V7.8H0.3V24z"/>
                     </svg>
                 </a>
+                {{ end }}
             </div>
 
             <div class="col-10 offset-1 col-sm-6 offset-sm-1 col-md-5 offset-md-2 offset-lg-0 col-lg-3 adresses">
