i18n header and footer

--- a/site/themes/sogilis/layouts/_default/summary.html
+++ b/site/themes/sogilis/layouts/_default/summary.html
@@ -3,7 +3,7 @@
         <a href="{{ .Permalink }}">
             <img src="{{ "images/blog_preview_default.jpg" | relURL }}">
             <h1 class="title_name">{{ .Title }}</h1>
-            <p>Lire la suite...</p>
+            <p>{{ i18n "readMore" }}…</p>
         </a>
     </div>
 </div>
