--- a/site/themes/sogilis/layouts/partials/header.html
+++ b/site/themes/sogilis/layouts/partials/header.html
@@ -7,15 +7,15 @@
 
             <nav class="col-md-6 offset-md-3 col-lg-4 offset-lg-3 col-xl-5 offset-xl-2 ">
                 <div class="dropdown">
-                    <button class="dropbtn">Services</button>
+                    <button class="dropbtn">{{ i18n "services"}}</button>
                     <div class="dropdown-content">
-                        <a href="services-applications-cloud-native.html">Applications Cloud Natives</a>
-                        <a href="services-embarques-et-iot.html">Logiciels Embarqués & IoT</a>
-                        <a href="services-logiciels-critiques.html">Logiciels Critiques</a>
+                        <a href="services-applications-cloud-native.html">{{ i18n "cloudNativeApplications" }}</a>
+                        <a href="services-embarques-et-iot.html">{{ i18n "embeddedSoftwares" }}</a>
+                        <a href="services-logiciels-critiques.html">{{ i18n "criticalSoftwares" }}</a>
                     </div>
                 </div>
-                <a href="vision.html" class="menu_link_1">Notre Vision</a>
-                <a href="contact.html" class="menu_link_2">Contact</a>
+                <a href="vision.html" class="menu_link_1">{{ i18n "ourVision" }}</a>
+                <a href="contact.html" class="menu_link_2">{{ i18n "contact" }}</a>
             </nav>
         </div>
     </div>
