--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -8,7 +8,8 @@
 
             <div class="col-10 col-sm-5 col-md-4 offset-md-1 col-lg-3 offset-lg-1">
                 <h1 class="title_level_1">Contact</h1>
-                <a class="btn_dark_grey" href="contact.html">Contactez nous
+                <a class="btn_dark_grey" href="contact.html">
+                    {{ i18n "contactUs" }}
                     <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                          viewBox="0 0 7.5 10.3" style="enable-background:new 0 0 7.5 10.3;" xml:space="preserve">
                     <style type="text/css">
@@ -79,34 +80,36 @@
 
         <div class="row liens_pages">
             <div class="col-11 offset-1  col-sm-7 col-md-5 offset-md-1 col-lg-3 offset-lg-2">
-                <h1 class="title_level_1">Services</h1>
+                <h1 class="title_level_1">{{ i18n "services" }}</h1>
                 <ul>
-                    <li><a href="services-applications-cloud-native.html" class="liens_text">Applications Cloud Natives</a></li>
-                    <li><a href="services-embarques-et-iot.html" class="liens_text">Logiciels Embarqués & IoT</a></li>
-                    <li><a href="services-logiciels-critiques.html" class="liens_text">Logiciels Critiques</a></li>
+                    <li><a href="services-applications-cloud-native.html" class="liens_text">{{i18n "cloudNativeApplications" }}</a></li>
+                    <li><a href="services-embarques-et-iot.html" class="liens_text">{{ i18n "embeddedSoftwares" }}</a></li>
+                    <li><a href="services-logiciels-critiques.html" class="liens_text">{{ i18n "criticalSoftwares" }}</a></li>
                 </ul>
             </div>
 
             <div class="col-11 offset-1  col-sm-5 col-md-4 offset-md-0 col-lg-3 offset-lg-1">
-                <h1 class="title_level_1">L'Entreprise</h1>
+                <h1 class="title_level_1">{{ i18n "theCompany" }}</h1>
                 <ul>
-                    <li><a href="vision.html" class="liens_text">Notre Vision</a></li>
-                    <li><a href="emplois.html" class="liens_text">Emplois</a></li>
-                    <li><a href="" class="liens_text">Blog</a></li>
+                    <li><a href="vision.html" class="liens_text">{{ i18n "ourVision" }}</a></li>
+                    <li><a href="emplois.html" class="liens_text">{{ i18n "jobs" }}</a></li>
+                    <li><a href="" class="liens_text">{{ i18n "blog" }}</a></li>
                 </ul>
             </div>
         </div>
+
         <div class="row">
             <div class="col-12">
                 <div class="trait_gris_clair"></div>
             </div>
         </div>
+
         <div class="row subfooter  justify-content-between">
             <div class="col-9 col-sm-8 col-md-4 col-lg-4">
-                <p class="text_description">Sogilis - Tous Droits Réservés - 2019</p>
+                <p class="text_description">{{ i18n "allRightsReserved" }}</p>
             </div>
             <div class="col-2 col-sm-3 col-md-2 col-lg-1">
-                <a href="">Mentions Légales</a>
+                <a href="">{{ i18n "LegalInfo" }}</a>
             </div>
         </div>
     </div>
@@ -128,19 +131,19 @@
         <nav class="mainMenuMobile">
         <ul>
           <li>
-            <a href="services-applications-cloud-native.html">Applications Cloud Natives</a>
+            <a href="services-applications-cloud-native.html">{{i18n "cloudNativeApplications" }}</a>
           </li>
           <li>
-            <a href="services-embarques-et-iot.html">Logiciels Embarqués & IoT</a>
+            <a href="services-embarques-et-iot.html">{{ i18n "embeddedSoftwares" }}</a>
           </li>
           <li>
-            <a href="services-logiciels-critiques.html">Logiciels Critiques</a>
+            <a href="services-logiciels-critiques.html">{{ i18n "criticalSoftwares" }}</a>
           </li>
            <li>
-            <a href="vision.html">Notre Vision</a>
+            <a href="vision.html">{{ i18n "ourVision" }}</a>
           </li>
           <li>
-            <a href="contact.html">Contact</a>
+            <a href="contact.html">{{ i18n "contact" }}</a>
           </li>
         </ul>
       </nav>
