--- a/site/themes/sogilis/layouts/index.html
+++ b/site/themes/sogilis/layouts/index.html
@@ -1,20 +1,9 @@
 {{ define "main" }}
     <div class="container blog_index">
         <div class="row">
-            {{ range (.Paginate .Site.RegularPages).Pages }}
+            {{ range .Site.RegularPages.ByDate }}
                 {{ .Render "summary" }}
             {{ end }}
-        </div>
-
-        <div class="pagination">
-            {{ if .Paginator.HasPrev }}
-                <a href="{{ .Paginator.Prev.URL }}" class="left arrow">&#8592;</a>
-            {{ end }}
-            {{ if .Paginator.HasNext }}
-                <a href="{{ .Paginator.Next.URL }}" class="right arrow">&#8594;</a>
-            {{ end }}
-
-            <span>{{ .Paginator.PageNumber }}</span>
         </div>
     </div>
 {{ end }}
