--- a/site/themes/sogilis/layouts/_default/summary.html
+++ b/site/themes/sogilis/layouts/_default/summary.html
@@ -1,7 +1,11 @@
 <div class="col-10 offset-1 offset-sm-0 col-sm-6 col-md-4 col-lg-4 col-xl-4">
     <div class="blog_index_article">
         <a href="{{ .Permalink }}">
-            <img src="{{ "images/blog_preview_default.jpg" | relURL }}">
+            {{ with .Params.image }}
+                <img src="{{ . | relURL }}">
+            {{ else }}
+                <img src="{{ "images/blog_preview_default.jpg" | relURL }}">
+            {{ end }}
             <h1 class="title_name">{{ .Title }}</h1>
             <p>{{ i18n "readMore" }}…</p>
         </a>
