--- a/site/themes/sogilis/layouts/_default/single.html
+++ b/site/themes/sogilis/layouts/_default/single.html
@@ -5,7 +5,11 @@
 
         <div class="row header">
             <div class="col-12 offset-1 col-sm-6 offset-sm-0 col-md-6 col-lg-6">
-                <img src="{{ "images/blog/img_blog.jpg" | relURL }}">
+                {{ with .Params.image }}
+                    <img src="{{ . | relURL }}">
+                {{ else }}
+                    <img src="{{ "images/img_blog.jpg" | relURL }}">
+                {{ end }}
             </div>
             <div class="col-11 offset-2 col-sm-6 offset-sm-0 col-md-5 col-lg-4 article_title">
                 <h1>{{ .Title }}</h1>
@@ -27,7 +31,11 @@
             </div>
         </div>
 
-        <img src="{{ "images/blog/img_blog.jpg" | relURL }}">
+        {{ with .Params.image }}
+            <img src="{{ . | relURL }}">
+        {{ else }}
+            <img src="{{ "images/img_blog.jpg" | relURL }}">
+        {{ end }}
     </div>
 </main>
 {{ end }}
