--- a/site/themes/sogilis/layouts/_default/single.html
+++ b/site/themes/sogilis/layouts/_default/single.html
@@ -23,7 +23,7 @@
                     <br />
                     {{- with .PublishDate }}
                         {{ i18n "on" }}
-                        {{ .Format $.Site.Params.dateFormat }}
+                        {{ .Day }} {{ index $.Site.Data.mois (printf "%d" .Month) }} {{ .Year }}
                     {{- end }}
 
                 </p>
