--- a/site/themes/sogilis/layouts/_default/single.html
+++ b/site/themes/sogilis/layouts/_default/single.html
@@ -21,11 +21,11 @@
                         {{ .Site.Params.Author }}
                     {{- end }}
                     <br />
-                    <time class="post-date" datetime="{{ .PublishDate | safeHTML }}">
+                    <time class="post-date" datetime="{{ .Date.Format "2006-01-02T15:04:05-07:00" | safeHTML }}">
                         {{ i18n "on" }} {{ i18n "publishdate" . }}
                       </time>
 
-                  
+
 
                 </p>
             </div>
