--- a/site/themes/sogilis/layouts/index.html
+++ b/site/themes/sogilis/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
     <div class="container blog_index">
         <div class="row">
-            {{ range (.Site.RegularPages.ByDate).Reverse }}
+            {{ range (where .Site.AllPages.ByDate "Kind" "page").Reverse }}
                 {{ .Render "summary" }}
             {{ end }}
         </div>
